--- a/main.css
+++ b/main.css
@@ -1,2 +1,49 @@
 /* CSS Document */
 
+
+main{
+		
+	width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+/*  border: 1px solid black;*/
+	
+}
+
+h1,h2,h3,h4,h5,h6{	
+
+	font-family: "P22 Arts And Crafts", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+}
+
+h1{
+	
+	border-bottom: 1px solid black;
+	padding-bottom: 10px;
+}
+
+p {
+	
+	font-family: "ITCAvantGarden", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  font-size: 16px;
+
+
+}
+
+.outer_wrapper{
+	
+	display: flex;
+
+}
+
+.inner{
+	
+	 flex: 1;
+  padding: 10px;
+  margin: 10px;
+}
+
